--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE:** You must have huggingface account and user token. Then You have to request for dataset access from OSCAR Corpus as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -30,6 +37,7 @@
     }
    ],
    "source": [
+    "# verify huggingface \n",
     "!huggingface-cli whoami"
    ]
   },
