add example of compressing data

--- a/download_dataset.ipynb
+++ b/download_dataset.ipynb
@@ -217,6 +217,140 @@
    "source": [
     "data_list[0]['meta']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compress Data using Zstandard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedWriter name='oscar2301_km.jsonl.zst'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import zstandard as zstd \n",
+    "\n",
+    "def compressed_jsonl_file(file_path):\n",
+    "    cctx = zstd.ZstdCompressor()\n",
+    "    with open(file_path, 'rb') as input_file, open(file_path+\".zst\", 'wb') as output_file:\n",
+    "        cctx.copy_stream(input_file, output_file)\n",
+    "    \n",
+    "    return output_file\n",
+    "\n",
+    "compressed_jsonl_file('oscar2301_km.jsonl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### decompress data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oscar2301_km.jsonl.zst: 6612091914 bytes                                       \n"
+     ]
+    }
+   ],
+   "source": [
+    "!zstd -d oscar2301_km.jsonl.zst -o ddd.jsonl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NOTE:\n",
+    "Basically, We can write data directly into compressed file by using this library **Zstandard**. But in my exporation, I just tried to download the data from huggingface and store in in any particular format.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<zstd.ZstdCompressionWriter at 0x7f59a067fa50>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example of compressing data directly in python\n",
+    "import json\n",
+    "import zstandard as zstd\n",
+    "\n",
+    "def compressing(data: list, output_path: str):\n",
+    "    with open(output_path, 'wb') as file:\n",
+    "        cctx = zstd.ZstdCompressor()\n",
+    "        with cctx.stream_writer(file) as compressor:\n",
+    "            for record in data:\n",
+    "                json_str = json.dumps(record)\n",
+    "                compressor.write((json_str + '\\n').encode('utf-8'))\n",
+    "    return compressor\n",
+    "\n",
+    "# example data as list of dictionaries\n",
+    "data = [\n",
+    "    {\"id\": 1, \"name\": \"ABC\", \"age\": 30},\n",
+    "    {\"id\": 2, \"name\": \"ABC\", \"age\": 30},\n",
+    "    {\"id\": 3, \"name\": \"ABC\", \"age\": 30},\n",
+    "    {\"id\": 4, \"name\": \"ABC\", \"age\": 30},\n",
+    "]\n",
+    "\n",
+    "# compressing data\n",
+    "compressing(data, 'example.jsonl.zst')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "example.jsonl.zst   : 144 bytes                                                \n",
+      "{\"id\": 1, \"name\": \"ABC\", \"age\": 30}\n",
+      "{\"id\": 2, \"name\": \"ABC\", \"age\": 30}\n",
+      "{\"id\": 3, \"name\": \"ABC\", \"age\": 30}\n",
+      "{\"id\": 4, \"name\": \"ABC\", \"age\": 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## decompress and read to verify (terminal cammand)\n",
+    "!zstd -d example.jsonl.zst -o example.jsonl\n",
+    "!cat example.jsonl"
+   ]
   }
  ],
  "metadata": {
